# mush-finder-monorepo

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.github/workflows/: cd-gateway.yml  cd-worker.yml  ci.yml
apps/mush-frontend/: index.html  package.json  vite.config.ts
apps/mush-frontend/dev-dist/: sw.js  sw.js.map
apps/mush-frontend/public/: site.webmanifest
apps/mush-frontend/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
apps/mush-frontend/src/Pages/: App.tsx  QA.tsx  Spcies.tsx  Terms.tsx
apps/mush-frontend/src/components/: Disclaimer.tsx  Footer.tsx  Header.tsx  History.tsx  Introduction.tsx
apps/mush-frontend/src/components/inference/: ConsentDialog.tsx  ConsentGuard.tsx  EdgeModelGuard.tsx  Inference.tsx  InferenceEntry.tsx
apps/mush-frontend/src/components/layout/: Brand.tsx  Footer.tsx  Header.tsx  ThemeToggle.tsx
apps/mush-frontend/src/components/shared/: CtaBtn.tsx  IconBtn.tsx  Loading.tsx  ResultCard.tsx  RotatingParagraph.tsx
apps/mush-frontend/src/constants/: QAItems.tsx  constants.ts
apps/mush-frontend/src/lib/: img-utils.ts  indexed-db-helper.ts  math-utils.ts  online-inference.ts  timeout-util.ts
apps/mush-frontend/src/lib/hooks/: useAppMode.ts  useOutsideClick.ts  useTheme.ts  useUploadForm.ts
apps/mush-frontend/src/lib/inference-engine/: inference-interface.ts  offline-inference.ts  online-inference.ts
apps/mush-frontend/src/lib/stores/: app-mode-store.ts  disclaimer-store.ts  history-store.ts  theme-store.ts
apps/mush-gateway/: .dev.vars.sample  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
apps/mush-gateway/src/: index.ts  sentry.ts  service.ts
apps/mush-worker/: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  schema.sh
apps/mush-worker/mush_worker/: main.py  mush_model.py  redis_service.py  schema.py  schemas.py  settings.py  utils.py  worker.py
apps/mush-worker/mush_worker/models/: HashTask_schema.py  TaskResponse_schema.py  __init__.py
